Added floating score effect when patrons are fed.
Feeding patrons now results in a floating "+100" score
indicator above the head of the patron that was just fed.

Tested on Linux and Nexus 5

Change-Id: Id3fe102598f5b9a50aeba2c4d0cbb69b33d1ce68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,6 +227,8 @@ set(zooshi_SRCS
     src/components/river.h
     src/components/services.cpp
     src/components/services.h
+    src/components/simple_movement.cpp
+    src/components/simple_movement.h
     src/components/shadow_controller.cpp
     src/components/shadow_controller.h
     src/components/sound.cpp
