Adding a surrounding cave to the level start.
Adding a cave to hide the world so that players are directed forward.
This is temporarily one of the rocks, viewed from inside.

Adding a component that hides and shows the entity, based on the
current lap of the raft entity.

Tested on Linux and Android.

Change-Id: I53cbf3743cde058e0c3b1c716777b5da36bc0f30

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,8 @@ set(zooshi_SRCS
     src/components/audio_listener.h
     src/components/digit.cpp
     src/components/digit.h
+    src/components/lap_dependent.cpp
+    src/components/lap_dependent.h
     src/components/patron.cpp
     src/components/patron.h
     src/components/player.cpp
