--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -28,6 +28,28 @@
       { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
       { "x_min": 8.5,   "x_max": 13.5,  "z_min": 1.8, "z_max": 2.2 }
     ],
+    "zones": [
+      {
+        "zone_start": 0.0,
+        "material": "materials/riverbank_grass_daytime.fplmat"
+      },
+      {
+        "zone_start": 0.33,
+        "material": "materials/riverbank_grass_daytime_savanna_daytime.fplmat"
+      },
+      {
+        "zone_start": 0.38,
+        "material": "materials/riverbank_savanna_daytime.fplmat"
+      },
+      {
+        "zone_start": 0.86,
+        "material": "materials/riverbank_savanna_daytime_grass_daytime.fplmat"
+      },
+      {
+        "zone_start": 0.90,
+        "material": "materials/riverbank_grass_daytime.fplmat"
+      },
+    ],
     "river_index": 3,
     "width": 5.0
   },
