--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,6 +207,7 @@ add_custom_command(TARGET assets POST_BUILD
 set(zooshi_SRCS
     src/camera.cpp
     src/camera.h
+    src/common.h
     src/components/attributes.cpp
     src/components/attributes.h
     src/components/audio_listener.cpp
