Generating a static mesh based on the river banks.
Adding a static mesh for the generated terrain of the river banks.

Tested on Linux (both in editor and in game) and Android.

Change-Id: I51888b8b16b88155f648f5022d919abe01476a7c

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -87,7 +87,13 @@
       },
     ],
     "river_index": 3,
-    "width": 5.0
+    "width": 5.0,
+    "collision_type": "Ground",
+    "collides_with": [
+      "Projectile"
+    ],
+    "mass": 1000.0,
+    "restitution": 0.5
   },
 
   "rendering_config" : {
