Add the default FlatUI font back in for now, for the editor.
This will be replaced with an editor-specific font soon.

Change-Id: I7aad2a7e640566d41e367ef56b630a288b30256b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,6 +209,12 @@ add_custom_command(TARGET assets POST_BUILD
                        ${CMAKE_BINARY_DIR}/src/rawassets/fonts
                        ${CMAKE_BINARY_DIR}/assets/fonts)
 
+# Copy default Font resource files from FlatUI
+add_custom_command(TARGET assets POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                       ${dependencies_flatui_dir}/assets/fonts
+                       ${CMAKE_BINARY_DIR}/assets/fonts)
+
 # zooshi source files.
 set(zooshi_SRCS
     src/camera.cpp
