Fixed an error where fonts weren't being copied correctly.
Fonts weren't being copied correctly for out-of-source builds.
This change fixes the paths so they copy correctly.

Change-Id: I072ddd71eb2b4abcccbd98310b226929a7ea816f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,7 +206,7 @@ add_custom_command(TARGET assets POST_BUILD
 # Copy Font resource files
 add_custom_command(TARGET assets POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
-                       ${CMAKE_BINARY_DIR}/src/rawassets/fonts
+                       ${CMAKE_SOURCE_DIR}/src/rawassets/fonts
                        ${CMAKE_BINARY_DIR}/assets/fonts)
 
 # zooshi source files.
