Adding Mac-related files to ignore
Change-Id: I9b88c756f084a8e08b9dbd50e8d2cb7125c446e3

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,13 @@ tags
 
 # emacs backup files
 *~
+
+# OSX files
+.DS_Store
+
+# XCode files
+*.xcscheme
+*.xcsettings
+*.xcuserstate
+*.xcworkspacedata
+*.xccheckout
