Adding larger viewport angle for Cardboard mode.
When in Cardboard mode a larger viewport angle is wanted, so adding a
larger one, set via the config file. Also fixing a bug where the wrong
camera was being used in Cardboard rendering.

Tested on Linux and Android.

Change-Id: I8f9466c313e90f7c99275f1ebad01ff7872b67ac

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -11,6 +11,8 @@
   "gravity": -30.0,
   "bullet_max_steps": 5,
 
+  "cardboard_viewport_angle": 1.570796, // 90 degrees
+
   "river_config" : {
     "rail_filename": "rails/player_path.bin",
     "spline_stepsize": 700.0,
