Initial integration of GPG service.
- Add gpg log in/out menu.
- Add leaderboard/achievement menu.
- Add hooks to gpg_manager.
- Has a dependency to CL/766854.

Change-Id: I0f7b646c6617bf7b333b121e06cc53ec90fb5264
Tested: on OSX.

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -201,5 +201,10 @@
       "entity_decorations.bin",
       "entity_ring.bin"
     ]
+  },
+  "gpg_config": {
+    "leaderboard_ids": [
+      "CgkI7IvL5LUCEAIQCQ",
+    ]
   }
 }
