states: add intro state for cardboard calibration
Bug: 23531365
Change-Id: I606768b1195baf6001a979bd00aac1572d6f7157

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,6 +307,8 @@ set(zooshi_SRCS
     src/rawassets
     src/states/game_menu_state.cpp
     src/states/game_menu_state.h
+    src/states/intro_state.cpp
+    src/states/intro_state.h
     src/states/gameplay_state.cpp
     src/states/gameplay_state.h
     src/states/pause_state.cpp
