Updated modules to use new node interface.
The interface in the event library changed, so various changes were
needed in Zooshi to accomodate it. This check in updates the code to be
able to use the new event system (but does not actually use it yet). In
a follow up commit the new graphs will be added and the old event system
will be torn out completely.

Tested on Linux.

Change-Id: I48a29ca5b5e3263c95832bb3c933843c1ee31871

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,8 +278,6 @@ set(zooshi_SRCS
     src/game.h
     src/gpg_manager.h
     src/gpg_manager.cpp
-    src/graph_factory.cpp
-    src/graph_factory.h
     src/gui.cpp
     src/inputcontrollers/mouse_controller.cpp
     src/inputcontrollers/mouse_controller.h
@@ -323,6 +321,8 @@ set(zooshi_SRCS
     src/world_renderer.h
     src/zooshi_entity_factory.cpp
     src/zooshi_entity_factory.h
+    src/zooshi_graph_factory.cpp
+    src/zooshi_graph_factory.h
     # For outputting flatbuffer files as json.
     ${dependencies_flatbuffers_dir}/src/idl_parser.cpp
     ${dependencies_flatbuffers_dir}/src/idl_gen_text.cpp
