Added collision graphs, removed old event system.
Removed references to the old event system. In its place event graphs
have been added that replicate the behavior of the old events.

Tested on Linux.

Change-Id: I1cc52df8fa102a870945702b5692acf28d6d4f6c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,6 +294,8 @@ set(zooshi_SRCS
     src/modules/logic.h
     src/modules/math.cpp
     src/modules/math.h
+    src/modules/physics.cpp
+    src/modules/physics.h
     src/modules/rail_denizen.cpp
     src/modules/rail_denizen.h
     src/modules/string.cpp
