GPG integration to graph & event system.
- Integrated 3 basic achievement counting # of sushi thrown.

Change-Id: I243d7e8357eeef55ddc332c23eebc8e6e028162f
Tested: on Android, OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -283,10 +283,14 @@ set(zooshi_SRCS
     src/modules/debug.h
     src/modules/entity.cpp
     src/modules/entity.h
+    src/modules/gpg.cpp
+    src/modules/gpg.h
     src/modules/logic.cpp
     src/modules/logic.h
     src/modules/math.cpp
     src/modules/math.h
+    src/modules/player_module.cpp
+    src/modules/player_module.h
     src/modules/physics.cpp
     src/modules/physics.h
     src/modules/rail_denizen.cpp
