Add loading state.
Keeps us from having a black screen as our game boots.

The next step is to move sound bank loading into an
asynchronous thread, too, so that we can get to drawing
the loading screen faster.

Tested: Works when I disable sound bank loading, on
Linux and Android.

Change-Id: Ib8c3ca8942183f344bedda68a059bd4fe14ab3fc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -304,10 +304,12 @@ set(zooshi_SRCS
     src/railmanager.h
     src/states/game_menu_state.cpp
     src/states/game_menu_state.h
-    src/states/intro_state.cpp
-    src/states/intro_state.h
     src/states/gameplay_state.cpp
     src/states/gameplay_state.h
+    src/states/intro_state.cpp
+    src/states/intro_state.h
+    src/states/loading_state.cpp
+    src/states/loading_state.h
     src/states/pause_state.cpp
     src/states/pause_state.h
     src/states/state_machine.h
