Add 'ADeliciousCycle' achievement & leaderboard support.
- Check a condition when a lap finishes if all patrons are fed in the cycle.
- Submit a score when the game finishes.
- Fix a regression related to the game state enum change.

Tested: on OSX, Android.

Change-Id: I09b51e7101054baeff43db413c18ff1e49c98ff0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,6 +302,8 @@ set(zooshi_SRCS
     src/modules/logic.h
     src/modules/math.cpp
     src/modules/math.h
+    src/modules/patron_module.cpp
+    src/modules/patron_module.h
     src/modules/player_module.cpp
     src/modules/player_module.h
     src/modules/physics.cpp
