Seperating how the projectile offset is defined.
Breaking apart how the projectile offset was defined into height and
forward amounts. Height is along the world's Z-axis, while forward is
relative to the direction that the sushi is being thrown. This allows
the sushi to spawn farther away from the camera, preventing near
clipping issues.

Tested on Linux and Android.

Change-Id: Ic06874d94a1882b456511c107fae8889d74f9833

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -7,7 +7,8 @@
 
   "projectile_speed": 40.0,
   "projectile_upkick": 7.5,
-  "projectile_offset": { "x": 0.0, "y": 0.0, "z": -0.5 },
+  "projectile_height_offset": -0.5,
+  "projectile_forward_offset": 1.6,
   "gravity": -30.0,
   "bullet_max_steps": 5,
 
