Add FullScreenFader for intro state.
Bug: 24206381
Tested: Runs on Mac and Android.

Change-Id: I9fa95f9e77b68bad975ee0974122f68687b8b8ad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,6 +276,8 @@ set(zooshi_SRCS
     src/components/sound.h
     src/components/time_limit.cpp
     src/components/time_limit.h
+    src/full_screen_fader.cpp
+    src/full_screen_fader.h
     src/game.cpp
     src/game.h
     src/gpg_manager.h
