Ensure patrons pop-out before they're culled.
This was particularly bad when looking behind you.
The patrons would suddenly disappear.

I could have changed the per-patron pop-in and pop-out
values, but the global values will let us more easily
tune culling for performance reasons.

Change-Id: Ie3fcc36b2fefa7cef0de7fb532bfcd89a96972e5
Tested: works well on Mac.

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -147,6 +147,8 @@
     "fog_color": {"r":0.95, "g":0.9, "b":0.7, "a":1.0},
     "fog_max_saturation": 0.25,
     "cull_distance": 50,
+    "pop_out_distance": 45,
+    "pop_in_distance": 40,
     "create_shadow_map":false
    },
 
