Animate scenery in and out to disguise cull-popping.
Recentered rock models so that animations rotated about their
centers. Counter-translated rock RenderMeshes
(in entity_prototypes.json) so that they appear in the same
place in the level.

Created SceneryComponent that animates scenery in and out
at pop-in and pop-out distances.

Tested: Works on Mac.
Change-Id: Ie0e94d7d8efbe1c1ad3143e07ef647dad2257edb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,6 +264,8 @@ set(zooshi_SRCS
     src/components/rail_node.h
     src/components/river.cpp
     src/components/river.h
+    src/components/scenery.cpp
+    src/components/scenery.h
     src/components/services.cpp
     src/components/services.h
     src/components/shadow_controller.cpp
