Added game over state.
A game over screen now appears when the game ends displaying your final
score.

Tested on Linux and Android.

Change-Id: Id6aed540c5503c8b18e7667ae5377c2f7dec32da

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -320,6 +320,8 @@ set(zooshi_SRCS
     src/modules/vec3.h
     src/railmanager.cpp
     src/railmanager.h
+    src/states/game_over_state.cpp
+    src/states/game_over_state.h
     src/states/game_menu_state.cpp
     src/states/game_menu_state.h
     src/states/gameplay_state.cpp
