Removed asyncronous callbacks on shutdown.
On desktop these don't cause a problem, but due to how android works
these asyncronous callbacks might be called after the game is supposed
to have ended, so it's important to clear them up or the game will crash
on shutdown.

Also updated the manifest to include the necessary permissions.

Tested on Linux and Android.

Change-Id: Id5f97ece1897b83ad1a810b20ef0d7b897948d53

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,8 +64,9 @@ limitations under the License.
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <!-- Allow accessing the internet to load external pages -->
+    <!-- Allow accessing the internet for analytics and gpg -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- Allow access to the NFC reader for Cardboard to use  -->
     <uses-permission android:name="android.permission.NFC" />
