Remove CJK font dependency from editor & remove it from build.
Tested: Linux desktop build.

Change-Id: I0b8516c47c7209725354ea087b9da76131be9b0f

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -171,7 +171,7 @@
     "gui_toolbar_size": 25,
     "gui_bg_toolbar_color": {"r":0, "g":0, "b":0, "a":1},
     "gui_bg_edit_ui_color": {"r":0, "g":0, "b":0, "a":0.5},
-    "gui_font": "fonts/NotoSansCJKjp-Bold.otf",
+    "gui_font": "fonts/NotoSans-Bold.ttf",
     "json_output_directory" : "../src/rawassets",
     "flatbuffer_editor_config": {
       "read_only": false,
